updating map default location, map size

--- a/client/src/components/Jumbotron/style.module.css
+++ b/client/src/components/Jumbotron/style.module.css
@@ -1,4 +1,4 @@
-/* .jtron-image {
+.jtron-image {
   height: 80vh;
   background-image: url(./images/pexels-dana-tentis-370799.jpg);
 }
@@ -9,4 +9,4 @@
   text-align: center;
   padding: 25px;
   color: white;
-} */
+}
