--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,11 +37,53 @@ footer {
   padding-top: 40px;
 }
 
+.review-cards.row {
+  padding: 25px;
+  text-align: center;
+  align-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
 .review-card {
-  float: left;
   width: 18rem;
 }
 
-/* div {
+.service {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.col:hover .service {
+  opacity: 0.3;
+}
+
+.col:hover .middle {
+  opacity: 1;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.text {
+  background-color: cornflowerblue;
+  border-radius: 10px;
+  color: white;
+  font-size: 16px;
+  padding: 5px 10px;
+}
+
+div {
   border: 1px solid red;
-} */
+}
