--- a/client/src/components/Map/Map.css
+++ b/client/src/components/Map/Map.css
@@ -18,3 +18,33 @@
     padding: 6px;
     font-weight: bold;
   }
+
+  .mapboxgl-popup-content{
+  text-align: center; 
+  padding: 0;
+  width: 200px;
+    
+  }
+
+  .mapboxgl-popup-close-button {
+    
+    display: none;
+  }
+
+  .mapboxgl-popup-content h5 {
+    background: #0F416E;
+    color: #fff;
+    margin: 0;
+    display: block;
+    padding: 10px;
+    border-radius: 3px 3px 0 0;
+    font-weight: 700;
+    margin-top: -15px;
+  }
+
+  .mapboxgl-popup-content p {
+    margin: 0;
+    display: block;
+    padding: 10px;
+    font-weight: 400;
+  }
