--- a/client/src/index.css
+++ b/client/src/index.css
@@ -74,7 +74,7 @@ footer {
 
 .middle {
   transition: .5s ease;
-  opacity: 1;
+  opacity: 0;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -89,6 +89,10 @@ footer {
   color: white;
   font-size: 16px;
   padding: 5px 10px;
+}
+
+col:hover .text {
+  visibility: visible;
 }
 
 .badgeImg {
