--- a/client/src/components/Map/Map.css
+++ b/client/src/components/Map/Map.css
@@ -56,3 +56,11 @@
     font-weight: 400;
   }
  
+  .marker {
+    background-image: url('mapbox-icon.png');
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+  }
