--- a/client/src/components/Map/Map.css
+++ b/client/src/components/Map/Map.css
@@ -57,10 +57,10 @@
   }
  
   .marker {
-    background-image: url('mapbox-icon.png');
+    background-image: url('map-icon-red.png');
     background-size: cover;
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
     cursor: pointer;
   }
