--- a/client/src/components/Header/style.css
+++ b/client/src/components/Header/style.css
@@ -1,4 +1,8 @@
-nav {
+navbar {
     font-family: 'IBM Plex Serif', serif; 
     background-color: white;
-} 
+};
+
+/* .burger {
+    padding-left: 25vw;
+}; */
