adding styling to sign up

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -100,13 +100,14 @@ col:hover .text {
 }
 
 .new-user-title {
-  text-align: center;
+  /* text-align: center; */
   margin-left: auto;
   margin-right: auto;
 }
 
 .new-user-form {
-  text-align: center;
+  /* visibility: hidden; */
+  /* text-align: center; */
   margin-left: auto;
   margin-right: auto;
 }
