adding new icons

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -105,10 +105,10 @@ footer {
 }
 
 .text {
-  background-color: cornflowerblue;
-  border-radius: 10px;
+  background-color: darkblue;
+  border-radius: 5px;
   color: white;
-  font-size: 16px;
+  font-size: 24px;
   padding: 5px 10px;
 }
 
