updated seed file +map points

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -121,6 +121,10 @@ col:hover .text {
   width: 30px;
 }
 
+.tablePhoto{
+  width: 100px;
+}
+
 .new-user-title {
   margin-left: auto;
   margin-right: auto;
