--- a/client/src/index.css
+++ b/client/src/index.css
@@ -135,16 +135,45 @@ col:hover .text {
   margin-right: auto;
 }
 
+/* Review div */
+#review-div{
+  align-content: center;
+}
+
+/* SERVICES TABLE  */
+.table {
+  /* width: 100%; */
+  margin-top: 50px;
+  border: none;
+  padding: 15px;
+  text-align: center;
+}
+
+#phone, #tablet, #zoom, #wifi, #computer, #printer, #internet, #other {
+  text-align: center;
+  background-color: cornflowerblue;
+  font-family: 'Permanent Marker', cursive;
+  font-size: 24px;
+  color: white;
+  border-radius: 25px;
+}
+
+td, th {
+  font-weight: 400;
+  border-spacing: 200px;
+}
+
+tr:nth-child(even) {
+  background-color: #eee;
+}
+
 /* div {
   border: 1px solid red;
 } */
 
-/* Review div */
 
-#review-div{
-  align-content: center;
-  
-}
+
+
 
 
 /* MOBILE CSS FIXES  */
