--- a/client/src/index.css
+++ b/client/src/index.css
@@ -69,6 +69,9 @@ footer {
   width: 18rem;
 }
 
+.reviewCard {
+  margin: 10px;
+}
 /* SERVICE ICON STYLING */
 
 .product-row {
@@ -140,6 +143,8 @@ col:hover .text {
   align-content: center;
 }
 
+
+
 /* SERVICES TABLE  */
 .table {
   /* width: 100%; */
@@ -160,10 +165,9 @@ col:hover .text {
 
 td, th {
   font-weight: 400;
-  border-spacing: 200px;
 }
 
-tr:nth-child(even) {
+tr:nth-child(odd) {
   background-color: #eee;
 }
 
